--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Gaymen.cf</title>
 </head>
 <frameset rows=”100%,0″ border=”0″>
-<frame src=”http://web.mcverse.cf” frameborder=”0″>
+<frame src=”https://web.mcverse.cf” frameborder=”0″>
 <frame frameborder=”0″>
 </frameset>
 </html>
