--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-<title>Gaymen.cf</title>
+<base href="http://www.abc.com" />
+<meta name="DESCRIPTION" content="">
+<TITLE></TITLE>
+</HEAD>
+<FRAMESET ROWS="100%,*" frameborder="no" framespacing=0 border=0>
+<FRAME SRC="https://www.xyz.com/login.htm" NAME="mainwindow" frameborder="no" framespacing="0" marginheight="0" marginwidth="0"></FRAME>
+</FRAMESET>
+<NOFRAMES>
 </head>
-<frameset rows=”100%,0″ border=”0″>
-<frame src=”https://web.mcverse.cf/” frameborder=”0″>
-<frame frameborder=”0″>
-</frameset>
 </html>
