--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<base href="http://www.abc.com" />
-<meta name="DESCRIPTION" content="">
-<TITLE></TITLE>
+<base href="http://www.gaymen.cf" />
+<meta name="DESCRIPTION" content="Gaymen MC - WEB">
+<TITLE> Gaymen MC  - WEB </TITLE>
 </HEAD>
 <FRAMESET ROWS="100%,*" frameborder="no" framespacing=0 border=0>
-<FRAME SRC="https://www.xyz.com/login.htm" NAME="mainwindow" frameborder="no" framespacing="0" marginheight="0" marginwidth="0"></FRAME>
+<FRAME SRC="https://web.mcverse.cf" NAME="mainwindow" frameborder="no" framespacing="0" marginheight="0" marginwidth="0"></FRAME>
 </FRAMESET>
 <NOFRAMES>
 </head>
