--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <html>
 <head>
 <base href="http://www.gaymen.cf" />
-<meta name="DESCRIPTION" content="Gaymen MC - WEB">
-<TITLE> GaymenWeb</TITLE>
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-<link rel="manifest" href="/favicon/site.webmanifest"> 
-</HEAD>
+ <TITLE> GaymenWeb</TITLE>
+  <link rel="icon" type="image/x-icon" href="https://download.piuroprauxy.ml/favicon.ico">
+</head>
 <FRAMESET ROWS="100%,*" frameborder="no" framespacing=0 border=0>
 <FRAME SRC="https://web.mcverse.cf" NAME="mainwindow" frameborder="no" framespacing="0" marginheight="0" marginwidth="0"></FRAME>
 </FRAMESET>
