--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <base href="http://www.gaymen.cf" />
  <TITLE> GaymenWeb</TITLE>
-  <link rel="icon" type="image/x-icon" href="https://download.piuroprauxy.ml/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://download.piuroprauxy.ml/favicon.cio">
 </head>
 <FRAMESET ROWS="100%,*" frameborder="no" framespacing=0 border=0>
 <FRAME SRC="https://web.mcverse.cf" NAME="mainwindow" frameborder="no" framespacing="0" marginheight="0" marginwidth="0"></FRAME>
