--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
 <base href="http://www.gaymen.cf" />
- <TITLE> GaymenWeb</TITLE>
-  <link rel="icon" type="image/x-icon" href="https://download.piuroprauxy.ml/favicon.cio">
+<TITLE> GaymenWeb</TITLE>
+<link rel="icon" type="image/x-icon" href="https://download.piuroprauxy.ml/favicon.cio">
+<meta property="og:description" content="Geyming Minecraft network" />
+<meta property="og:url" content="gaymen.cf" />
+<meta name="keywords" content="minecraft,mc,mcverse,gaymencf,gaymemmc,mcvserseweb,webgaymencf,webgaymenmc,balls,chad,blunden">
+<meta property="og:title" content="GeymingMC web" />
 </head>
 <FRAMESET ROWS="100%,*" frameborder="no" framespacing=0 border=0>
 <FRAME SRC="https://web.mcverse.cf" NAME="mainwindow" frameborder="no" framespacing="0" marginheight="0" marginwidth="0"></FRAME>
